--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <img class="img-fluid rounded mb-5" src="assets/img/portfolio/disk_monitor.png" alt="..." />
                 <!-- Portfolio Modal - Text-->
                 <p class="mb-4">부서 내에서 타 팀원들과 업무를 공유하고 프로세스를 확인 할 수 있도록 지원하는 페이지를 개발하였습니다.<br />
-                기존 엑셀 및 수기로 진행하던 작업들을 웹페이지에서 가능하도록 하여 업무 효율성을 높이고 관리에 용이하도록 지원하였습니다. <br />
+                기존 엑셀 및 수기로 진행하던 작업들을 웹페이지에서 가능하도록 하여 <br />업무 효율성을 높이고 관리에 용이하도록 지원하였습니다. <br />
                 사용기술: MSSQL, python/flask, Javascript, jQuery, bootstrap</p>
                 <button class="btn btn-primary" onclick="toggleClass(2)">
                   Show details
